--- a/src/station1.html
+++ b/src/station1.html
@@ -7,5 +7,9 @@
 <title>Station 1</title>
 </head>
 <body>
+<div>
+    <img src="html-stations/src/assets/image/railway-thumbnail.png" alt="railway-thumbnail">
+    <p>TechTrainの使い方</p>
+</div>
 </body>
 </html>
