--- a/src/station1.html
+++ b/src/station1.html
@@ -10,6 +10,7 @@
 <div>
     <img src="html-stations/src/assets/image/railway-thumbnail.png" alt="railway-thumbnail">
     <p>TechTrainの使い方</p>
+    <p>テックトレインの使い方</p>
 </div>
 </body>
 </html>
